[package]
name = "ascendancy-injector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3.9", features = ["everything", "tlhelp32", "handleapi", "processthreadsapi", "winnt", "memoryapi"] }
eframe = "0.27.2"