[package]
name = "ascendancy-injector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3.9", features = ["everything", "tlhelp32","shellapi", "handleapi", "processthreadsapi", "winnt", "memoryapi", "wingdi", "minwindef"] }
eframe = "0.27.2"
font-kit = {git = "https://github.com/servo/font-kit"}
reqwest = { version = "0.12.4", features = ["blocking", "json"] }
runas = "1.2.0"